<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MAMIA</string>
    <string name="mamia">mAMIA</string>
    <string name="home_screen">home screen</string>
    <string name="logo">logo</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="age">Age:</string>
    <string name="race">Race:</string>
    <string name="ethnicity">Ethnicity:</string>
    <string name="next">Next</string>
    <string name="input">Input</string>
    <string name="journal_entry">journal entry</string>
    <string name="allow_us_to_access_your_fitbit_data">Allow us to access your fitbit data?</string>
    <string name="the_first_day_of_your_lmp">The first day of your last menstrual period?</string>
    <string name="app_label">MAMIA</string>
    <string name="search_hint">Search for a topic or question...</string>
    <string name="welcome_message">Hello, %1$s!</string>
    <string name="what_do_you_want_to_do">what do you want to do?</string>
    <string name="for_mom_s_health">FOR MOM\'S HEALTH!</string>
    <string name="allow_us_to_get_your_age_race_ethnicity_and_trimester">Allow us to get your age, race, ethnicity, and trimester?</string>
    <string name="view_previous_entries">View previous entries</string>
    <string name="dashboard">Dashboard</string>
    <string name="recommendations">Recommendations</string>
    <string name="graphs">graphs</string>
    <string name="journal">Journal Entry</string>
    <string name="settings">Settings</string>
    <string name="what_did_you_eat_today">What did you eat today?</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="what_is_your_name">What is your name?</string>
    <string name="name">Name</string>
    <string name="first_name">first name</string>
    <string name="search_for_recommendations">search for recommendations</string>
    <string name="auto_save">auto-save</string>
    <string name="fitbit_entry">Fitbit Entry</string>
    <string name="save">save</string>
    <string-array name="ageArray">
        <item>Select your age group</item>
        <item>0-9</item>
        <item>10-19</item>
        <item>20-29</item>
        <item>30-39</item>
        <item>40-49</item>
        <item>50-59</item>
        <item>60-69</item>
        <item>70-79</item>
        <item>80-89</item>
        <item>90-99</item>
    </string-array>
    <string-array name="raceArray">
        <item>Select your race</item>
        <item>American Indian or Alaska Native</item>
        <item>Asian</item>
        <item>Black or African American</item>
        <item>Native Hawaiian or Other Pacific Islander</item>
        <item>White</item>
        <item>Other</item>
    </string-array>
    <string-array name="ethnicityArray">
        <item>Select your ethnicity</item>
        <item>Hispanic or Latino</item>
        <item>Not Hispanic or Latino</item>
    </string-array>
    <string-array name="searchArray">
        <item>Question 1</item>
        <item>Question 2</item>
        <item>Topic 1</item>
        <item>Topic 2</item>
    </string-array>
    <string-array name="journalArray">
        <item>Select a journal prompt</item>
        <item>How are you really feeling?</item>
        <item>What are some goals for today? The future?</item>
        <item>What did you eat today?</item>
        <item>List the sedentary and physical activities you did today!</item>
        <item>Reflect on your journey</item>
        <item>Spill some thoughts!</item>
    </string-array>
    <string-array name="languageArray">
        <item>English</item>
        <item>Mandarin</item>
        <item>Spanish</item>
    </string-array>


</resources>