<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:contentDescription="@string/home_screen">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mamia"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="80sp"
            android:id="@+id/mamia"
            android:textAlignment="center"
            app:layout_constraintVertical_bias="0.2"
            android:gravity="center_horizontal"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:textColor="@color/red_1"
            />

    <ImageView
            android:layout_width="294dp"
            android:layout_height="307dp"
            app:srcCompat="@drawable/logo"
            android:id="@+id/main_logo"
            app:layout_constraintTop_toBottomOf="@+id/mamia"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/logo"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="FOR MOM'S HEALTH!"
            app:layout_constraintTop_toBottomOf="@+id/main_logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textSize="20sp"
            android:id="@+id/main_text"
            android:textAlignment="center"
            app:layout_constraintVertical_bias="0.2"
            android:gravity="center_horizontal"
            android:fontFamily="sans-serif"
            android:textStyle="bold|italic"
            android:textColor="@color/black"
            />

</androidx.constraintlayout.widget.ConstraintLayout>

