<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".JournalActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="30dp"
            android:id="@+id/switchBar">

        <Switch
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="120dp"
                android:id="@+id/switch1"
                android:text="@string/input"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="UseSwitchCompatOrMaterialXml"
                android:layout_marginStart="120dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/dashboard"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginStart="10dp"/>
    </LinearLayout>

    <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switchBar"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:id="@+id/journal_prompt"
            tools:text="What did you eat today?"
            android:fontFamily="sans-serif"
            android:textColor="@color/red_1"
            android:textSize="30sp"/>

    <EditText
            android:inputType="text"
            android:background="@drawable/border_calendar"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/journal_prompt"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:padding="10dp"
            android:id="@+id/journal_entry"
            tools:text="Start typing"
            android:autofillHints="Start typing"
            android:hint="@string/journal_entry"
            android:gravity="start"
            android:fontFamily="sans-serif"
            android:textColor="@color/black"
            android:textSize="20sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>