<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".IntroActivity3">

    <TextView
            android:text="@string/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/age_text"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.1"/>

    <TextView
            android:text="@string/race"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/race_text"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:layout_marginTop="120dp"
            app:layout_constraintTop_toBottomOf="@+id/age_text"
            app:layout_constraintLeft_toLeftOf="@+id/age_text"/>

    <TextView
            android:text="@string/ethnicity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ethnicity_text"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:layout_marginTop="120dp"
            app:layout_constraintTop_toBottomOf="@+id/race_text"
            app:layout_constraintLeft_toLeftOf="@+id/race_text"/>


    <Spinner
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/age_spinner"
            android:addStatesFromChildren="false"
            app:layout_constraintTop_toBottomOf="@+id/age_text"
            app:layout_constraintStart_toStartOf="@+id/age_text"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif"
            android:textColor="@color/black"/>

    <Spinner
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/race_spinner"
            android:addStatesFromChildren="false"
            app:layout_constraintTop_toBottomOf="@+id/race_text"
            app:layout_constraintStart_toStartOf="@+id/race_text"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif"
            android:textColor="@color/black"/>

    <Spinner
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/ethnicity_spinner"
            android:addStatesFromChildren="false"
            app:layout_constraintTop_toBottomOf="@+id/ethnicity_text"
            app:layout_constraintStart_toStartOf="@+id/ethnicity_text"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif"
            android:textColor="@color/black"/>

    <Button
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/ethnicity_spinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:id="@+id/button3"
            android:onClick="nextActivity"
            android:background="@drawable/border"
            android:text="Next"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            app:backgroundTint="@color/red_1"
            tools:ignore="UsingOnClickInXml"/>



</androidx.constraintlayout.widget.ConstraintLayout>